fix collapsing div when click level to make games show up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,18 +28,43 @@ span.blank-space {
 
 #main {
 	margin: 0 auto;
+	position: relative;
 }
 
 .environment {
 	margin: 5px auto;
 	margin-bottom: 0;
 	border: 5px solid #878155;
-	height: 100%;
+	height: 250px;
 	width: 46%;
 	display: inline-block;
 	text-decoration: bolder;
 	clear: both;
-	position: relative;
+	/*position: relative;*/
+}
+
+#jungle {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#savanna {
+	position: absolute;
+	top: 0;
+	left: 50%;
+}
+
+#forest {
+	position: absolute;
+	top: 275px;
+	left: 0%;
+}
+
+#farm {
+	position: absolute;
+	top: 275px;
+	left: 50%;
 }
 
 .clear {
@@ -75,11 +100,14 @@ span.blank-space {
 	width: 100%;
 	height: auto;
 	text-align: center;
+
 }
 
 .game_list {
-	/*display: none;*/
-	margin: 20px auto;
+	margin: 0 auto;
+	width: 100%;
+	height: auto;
+	text-align: center;
 }
 
 /*.octagon {
